--- a/src/Makefile
+++ b/src/Makefile
@@ -6,13 +6,11 @@ ifdef linux
 tag = -n
 endif
 
+test.out: Record.o Comparison.o ComparisonEngine.o Schema.o File.o DBFile.o HeapFile.o GenericDBFileBaseClass.o y.tab.o lex.yy.o test.o
+	$(CC) -o test.out Record.o Comparison.o ComparisonEngine.o Schema.o File.o DBFile.o HeapFile.o GenericDBFileBaseClass.o y.tab.o lex.yy.o test.o -lfl
 	
-main: Record.o Comparison.o ComparisonEngine.o Schema.o File.o DBFile.o HeapFile.o GenericDBFileBaseClass.o y.tab.o lex.yy.o main.o
-	$(CC) -o main Record.o Comparison.o ComparisonEngine.o Schema.o File.o DBFile.o HeapFile.o GenericDBFileBaseClass.o y.tab.o lex.yy.o main.o -lfl
-	
-
-main.o: main.cc
-	$(CC) -g -c main.cc
+test.o: test.cc
+	$(CC) -g -c test.cc
 	
 Comparison.o: Comparison.cc
 	$(CC) -g -c Comparison.cc
